--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -75,6 +75,12 @@ header{
     background: #f6f6f6;
     height: 160px;
     overflow: hidden;
+    position: relative;
+    a{
+      position: absolute;
+      width: 100%;
+      height: 100%;
+    }
   }
   img{
     @include fullwidth;
