--- a/style.css
+++ b/style.css
@@ -82,7 +82,8 @@ header nav li a { color: white; font-size: .9em; }
 header nav li.current-cat a { color: rgba(255, 255, 255, 0.75); }
 
 .post { background: white; height: 340px; margin: 0 1% 2.5% 1%; position: relative; width: 22.5%; display: inline-block; *display: inline; *zoom: 1; vertical-align: top; }
-.post .thumbnail { background: #f6f6f6; height: 160px; overflow: hidden; }
+.post .thumbnail { background: #f6f6f6; height: 160px; overflow: hidden; position: relative; }
+.post .thumbnail a { position: absolute; width: 100%; height: 100%; }
 .post img { height: auto; width: 100%; }
 .post .thumbnail { background-repeat: no-repeat; background-position: center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
 .post .text { padding: 15px 20px; }
