New category page now fully working

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 /*
 Theme Name: Collections
-Description : A special theme working with expresscurate plugin : http://www.expresscurate.com
+Description : A mashup between a visual bookmarking website and a curated blog à la scoop.it
 Author: Daniel Rico
 Author URI: http://www.daniel-rico.com
 */
